[gd_scene load_steps=6 format=3 uid="uid://ekqlub7k865j"]

[ext_resource type="Theme" uid="uid://bimvjqmjjj4jh" path="res://assets/resources/theme/main.tres" id="1_wubls"]
[ext_resource type="Script" uid="uid://urbti045qhl5" path="res://scr/user_interface/tags/tag_ui.gd" id="2_dvcwg"]
[ext_resource type="FontFile" uid="uid://bjr2pe6fnpvm3" path="res://assets/resources/fonts/NotoSans-Bold.ttf" id="3_76v4v"]
[ext_resource type="Texture2D" uid="uid://da4q4drae4qnk" path="res://assets/textures/icons/hash.svg" id="3_wubls"]

[sub_resource type="LabelSettings" id="LabelSettings_e7cb4"]
font = ExtResource("3_76v4v")
font_size = 12

[node name="Tag" type="PanelContainer"]
self_modulate = Color(0.9441502, 0.3699762, 9.62615e-07, 1)
mouse_behavior_recursive = 1
theme = ExtResource("1_wubls")
theme_type_variation = &"TagPanel"
script = ExtResource("2_dvcwg")

[node name="MainButton" type="Button" parent="."]
layout_mode = 2
mouse_behavior_recursive = 2
mouse_default_cursor_shape = 2
theme_type_variation = &"ButtonSimple"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HashIconTextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(0.078431375, 0.078431375, 0.078431375, 1)
layout_mode = 2
texture = ExtResource("3_wubls")
stretch_mode = 5

[node name="TagNameLabel" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "tag name"
label_settings = SubResource("LabelSettings_e7cb4")

[connection signal="pressed" from="MainButton" to="." method="_on_main_button_pressed"]
